# niwanowa-samples

./: .gitignore  LICENSE  README.md
.github/workflows/: aws.yml
Mermaid/: 01.md
azure-terraform/: main.tfplan
azure-terraform/env/dev/: .terraform.lock.hcl  main.tf  provider.tf  variable.tf
azure-terraform/modules/static_web_apps/: main.tf  variable.tf
azure-terraform/modules/virtual_network/: main.tf  output.tf  variable.tf
azure-terraform/swa_sample/: .terraform.lock.hcl  main.tf  variables.tf
google-reverse-geocoding/: .env_example  pyproject.toml  sample.py
youtube-data-api/: oauth.py  pyproject.toml  search.py
youtube-data-api/src/: create_list.py  oauth.py  scraping_livefans.py  search.py
