[tool.poetry]
name = "google-reverse-geocoding"
version = "0.1.0"
description = ""
authors = ["niwanowa <40478818+niwanowa@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
googlemaps = "^4.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
