[tool.poetry]
name = "youtube-data-api"
version = "0.1.0"
description = ""
authors = ["niwanowa <40478818+niwanowa@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
google-api-python-client = "^2.117.0"
httplib2 = "^0.22.0"
google-auth-oauthlib = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
